--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ mkdocs-include-markdown-plugin = "^3.2.0"
 
 [tool.poetry.scripts]
 reformat = "scripts.poetry:reformat"
-check = "scripts.poetry:check"
+test = "scripts.poetry:test"
 docs = "scripts.poetry:docs"
 
 
