--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -48,8 +48,8 @@ jobs:
           tagging_message: ${{ env.VERSION }}
           skip_fetch: true
 
-      - name: Publish MkDocs to Github Pages
-        run: poetry run docs
+#      - name: Publish MkDocs to Github Pages
+#        run: poetry run docs
 
 #      - name: Create Github release draft
 #        id: create_release
