--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ isort = "^5.9"
 mkdocs = "^1.2"
 mkdocs-include-markdown-plugin = "^3.2"
 hypothesis = {extras = ["codemods"], version = "^6.14"}
+mkdocs-material = "^7.2.0"
 
 [tool.poetry.scripts]
 reformat = "scripts.poetry:reformat"
